--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             </div>
         </div>
     </footer>
-    <div class="modal__backdrop .modal__backdrop--ishidden" data-modal>
+    <div class="modal__backdrop .modal__backdrop--is-hidden" data-modal>
         <div class="modal">
             <button class="modal__btn-close" data-modal-close> 
                 <svg class="close-icon" width="18" height="18">
@@ -409,7 +409,7 @@
                             <label for="name" class="form__label">Ім'я
                             </label>
                             <input type="text" name="name" id="name" class="form__input" required>
-                            <svg class="form__modal">
+                            <svg class="form__icon">
                                 <use href="./images/symbol-defs.svg#icon-person"></use>
                             </svg>
                         </li>
