--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             </div>
         </div>
     </footer>
-    <div class="modal__backdrop .modal__backdrop--is-hidden" data-modal>
+    <div class="modal__backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal__btn-close" data-modal-close> 
                 <svg class="close-icon" width="18" height="18">
