hidden title done

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
         <!--Приклади робіт-->
         <section class="section">
             <div class="container">
-                <h1 class="examples__hidden-title">Приклади робіт</h1>
+                <h1 class="hidden-title">Приклади робіт</h1>
                 <!--Конопки\фільтр-->
                 <ul class="buttons">
                     <li class="buttons__item"> 
