--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Наші переваги-->
         <section class="section">
             <div class="container">
-                <h2 class="advantages__hidden-title">Наші переваги</h2>
+                <h2 class="hidden-title">Наші переваги</h2>
                 <ul class="advantages">
                     <li class="advantages__item">
                         <div class="advantages__box">
