links and border done

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <!-- Шапка -->
-    <header>
+    <header class="header">
         <div class="container">
-            <nav class="nav">
+            <nav class="header__nav">
                 <a href="./index.html" class="logo"><span class="logo logo--blue">Web</span>Studio</a>
                 <ul class="social-links">
                     <li class="social-links__item"><a href="./index.html" class="social-links__link social-links__link--current">Студія</a></li>
