--- a/portfolio.html
+++ b/portfolio.html
@@ -10,14 +10,13 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-            <nav class="nav">
+            <nav class="header__nav">
                 <a href="./index.html" class="logo"><span class="logo logo--blue">Web</span>Studio</a>
                 <ul class="social-links">
-                    <li class="social-links__item"><a href="./index.html"
-                            class="social-links__link">Студія</a></li>
-                    <li class="social-links__item"><a href="./portfolio.html" class="social-links__link social-links__link--current">Портфоліо</a></li>
+                    <li class="social-links__item"><a href="./index.html" class="social-links__link social-links__link--current">Студія</a></li>
+                    <li class="social-links__item"><a href="./portfolio.html" class="social-links__link">Портфоліо</a></li>
                     <li class="social-links__item"><a href="" class="social-links__link">Контакти</a></li>
                 </ul>
                 <ul class="contacts">
